--- a/example/home/templates/home/home_page.html
+++ b/example/home/templates/home/home_page.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
-{% load static %}
+{% load static wagtailcore_tags %}
 
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
+    <h1>{{ page.title }}</h1>
 
-    {{ page.title }}
+    {{ page.body|richtext }}
 
 {% endblock content %}
