First pass at checking each url in the report

--- a/src/wagtail_unveil/templates/wagtail_unveil/unveil_report_results.html
+++ b/src/wagtail_unveil/templates/wagtail_unveil/unveil_report_results.html
@@ -1,5 +1,5 @@
 {% extends 'wagtailadmin/reports/base_report_results.html' %}
-{% load wagtailadmin_tags %}
+{% load wagtailadmin_tags static %}
 
 {% block results %}
     <table class="listing">
@@ -9,12 +9,12 @@
                 <th>Model Name</th>
                 <th>URL Type</th>
                 <th>URL</th>
-                <th>Actions</th>
+                <th>Actionssss</th>
             </tr>
         </thead>
         <tbody>
             {% for entry in object_list %}
-                <tr>
+                <tr data-url="{{ entry.url }}" data-id="{{ entry.id }}" data-check>
                     <td>{{ entry.id }}</td>
                     <td>{{ entry.model_name }}</td>
                     <td>{{ entry.url_type }}</td>
