--- a/src/wagtail_unveil/templates/wagtail_unveil/unveil_report_results.html
+++ b/src/wagtail_unveil/templates/wagtail_unveil/unveil_report_results.html
@@ -8,9 +8,9 @@
                 <th>ID</th>
                 <th>Model Name</th>
                 <th>URL Type</th>
-                <th>URL</th>
-                <th>Actions</th>
-                <th>Check Result</th>
+                <th>&nbsp;</th>
+                <th>&nbsp;</th>
+                <th>Admin / Frontend URL</th>
             </tr>
         </thead>
         <tbody>
@@ -19,15 +19,15 @@
                     <td>{{ entry.id }}</td>
                     <td>{{ entry.model_name }}</td>
                     <td>{{ entry.url_type }}</td>
-                    <td>{{ entry.url }}</td>
-                    <td>
-                        <a href="{{ entry.url }}" target="_blank" class="button button-small">View</a>
-                    </td>
                     <td data-result>
                         <svg class="icon icon-radio-empty w-w-4 w-h-4" aria-hidden="true"><use href="#icon-radio-empty"></use></svg>
                         <svg class="icon icon-circle-check w-w-4 w-h-4" aria-hidden="true"><use href="#icon-circle-check"></use></svg>
                         <svg class="icon icon-error w-w-4 w-h-4" aria-hidden="true"><use href="#icon-error"></use></svg>
                     </td>
+                    <td>
+                        <a href="{{ entry.url }}" target="_blank" class="button button-small bicolor button--icon"><span class="icon-wrapper"><svg class="icon icon-link-external icon" aria-hidden="true"><use href="#icon-link-external"></use></svg></span>View Page</a>
+                    </td>
+                    <td>{{ entry.url }}</td>
                 </tr>
             {% endfor %}
         </tbody>
@@ -35,5 +35,5 @@
 {% endblock %}
 
 {% block no_results_message %}
-    <p>No URLs found. This could be because there are no pages in the system or the helper functions did not return any results.</p>
+    <p>No URLs found.</p>
 {% endblock %}
