Woeking MVP for the Unveil Report

--- a/src/wagtail_unveil/templates/wagtail_unveil/unveil_report.html
+++ b/src/wagtail_unveil/templates/wagtail_unveil/unveil_report.html
@@ -8,7 +8,7 @@
             var checkUrlsButton = document.querySelectorAll('[data-action="check-urls"]')[0];
             var checkUrls = document.querySelectorAll('[data-check]');
 
-            // Hide the success and error SVGs on page load, only show the empty radio button in mid-grey
+            // Hide the success and error SVGs on page load, only show the empty radio button
             document.querySelectorAll('[data-result] .icon-circle-check, [data-result] .icon-error').forEach(svg => {
                 svg.style.display = 'none';
             });
